# label-alignment

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
jupyter/: annotation_tests.ipynb
src/label_alignment/: __about__.py  alignment.py  iob_state.py  sax2spans.py  simple_tokenizers.py  span_annotation.py  tok2spans.py  tokenized.py  types.py
src/label_alignment/annotation/: span_annotation.py
src/label_alignment/annotation/iob/: iob_conversion.py  iob_labels.py  iob_state.py
src/label_alignment/annotation/spans/: labeled.py  sax2spans.py  spaces  span_annotation.py  span_utils.py
src/label_alignment/tokenization/: simple_tokenizers.py  tokenized.py
tests/: __init__.py  conftest.py  test_iob_conversion_config.py  test_iob_labels.py  test_iob_state.py  test_whereami.py
tests/anno/: conftest.py  test_align_to_span.py  test_alignment.py  test_iob_conversion.py  test_sax2spans.py  test_simple_tokenizers.py
tests/data/annotated_texts/: COPYRIGHT  verne_20000_leagues.ch5.txt  verne_20000_leagues.ch5.xml
